--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,10 @@ Django==3.2.6
 django-cleanup==5.2.0
 django-crispy-forms==1.12.0
 django-mathfilters==1.0.0
+numpy==1.21.2
 Pillow==8.3.1
+python-dateutil==2.8.2
 pytz==2021.1
+scipy==1.7.1
+six==1.16.0
 sqlparse==0.4.1
