--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ django-cleanup==5.2.0
 django-crispy-forms==1.12.0
 django-mathfilters==1.0.0
 numpy==1.21.2
+pandas==1.3.3
+pdfkit==0.6.1
 Pillow==8.3.1
 python-dateutil==2.8.2
 pytz==2021.1
