--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 asgiref==3.4.1
+dj-database-url==0.5.0
 Django==3.2.6
 django-cleanup==5.2.0
+django-cors-headers==3.8.0
 django-crispy-forms==1.12.0
+django-heroku==0.0.0
 django-mathfilters==1.0.0
+gunicorn==20.1.0
 numpy==1.21.2
 pandas==1.3.3
 pdfkit==0.6.1
@@ -12,3 +16,5 @@ pytz==2021.1
 scipy==1.7.1
 six==1.16.0
 sqlparse==0.4.1
+whitenoise==3.3.0
+psycopg2==2.8.6
